--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 * Intro
 The sources for this driver are CVS-controlled:
 CVS root: sofa.ic.ornl.gov:/cs/epics/cvsroot  
-Module:   support/linac/ether_ip
+Module:   support/linac/ether_ip (aliased as ether_ip)
 
 The current release is 0-4.
 In the following examples, replace <RELEASE> by 0-4.
@@ -53,7 +53,7 @@ ether_ip/
        In the following example, SUP is set to
        /cs/epics/ADE/R3.13.3/support
     2. cd $SUP/ether_ip
-    3. cvs checkout -r ether_ip-<RELEASE> -d <RELEASE> ether_ip
+    3. cvs get -r ether_ip-<RELEASE> -d <RELEASE> ether_ip
     4. cd <RELEASE>
     5. gmake (or gnumake, make, ...)
     6. Changing the type of ioc: 
