--- a/iocBoot/iocether_ip/README
+++ b/iocBoot/iocether_ip/README
@@ -1,4 +1,9 @@
-To run the example application on Linux, do something like this:
+To run the example application on Linux,
+check the startup file st.cmd.host
+to check that the IP of the PLC is correct
+and that the loaded database has any resemblance
+of what's on the PLC.
+Then do something like this:
 
 export LD_LIBRARY_PATH=../../lib/linux-x86:$LD_LIBRARY_PATH;
  ../../bin/linux-x86/example st.cmd.host
